<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="study.br1221.productivitytimer">

    <PreferenceCategory android:title="@string/timer_preference_category_title" >
        <study.br1221.productivitytimer.NumberPickerDialogPreference
            android:key="focus_time_minutes"
            android:title="@string/focus_minute_picker_title"
            android:defaultValue="25"
            android:summary="@string/focus_minute_picker_summary"
            custom:min_value="0"
            custom:max_value="120"/>

        <study.br1221.productivitytimer.NumberPickerDialogPreference
            android:key="small_break_time_minutes"
            android:title="@string/small_break_minute_picker_title"
            android:defaultValue="5"
            android:summary="@string/small_break_minute_picker_summary"
            custom:min_value="0"
            custom:max_value="60"
            />

        <study.br1221.productivitytimer.NumberPickerDialogPreference
            android:key="big_break_time_minutes"
            android:title="@string/big_break_minute_picker_title"
            android:defaultValue="15"
            android:summary="@string/big_break_minute_picker_summary"
            custom:min_value="0"
            custom:max_value="120"/>

        <study.br1221.productivitytimer.NumberPickerDialogPreference
            android:key="sessions_until_big_break"
            android:title="@string/sessions_until_big_break_title"
            android:defaultValue="4"
            android:summary="@string/sessions_until_big_break_summary"
            custom:min_value="0"
            custom:max_value="10"/>
    </PreferenceCategory>



</PreferenceScreen>